--- a/apps/ts-interface/app/templates/application.hbs
+++ b/apps/ts-interface/app/templates/application.hbs
@@ -1,7 +1,1 @@
-{{page-title "TsInterface"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<DemoOne />
